[gd_scene load_steps=2 format=3 uid="uid://cm5yeengm2u3h"]

[ext_resource type="Script" uid="uid://b5x6w4qcay248" path="res://settings_menu/components/volumetric_fog.gd" id="1_81rr4"]

[node name="VolumetricFog" type="GridContainer"]
offset_right = 40.0
offset_bottom = 40.0
columns = 2
script = ExtResource("1_81rr4")

[node name="VolumetricFogLabel" type="Label" parent="."]
layout_mode = 2
text = "Volumetric Fog"

[node name="VolumetricFogOptions" type="OptionButton" parent="."]
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "Disabled"
popup/item_0/id = 0
popup/item_1/text = "Enabled"
popup/item_1/id = 1

[node name="VolumetricFogFilteringLabel" type="Label" parent="."]
layout_mode = 2
text = "Fog Smoothing"

[node name="VolumetricFogFilteringOptions" type="OptionButton" parent="."]
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "Disabled"
popup/item_0/id = 0
popup/item_1/text = "Enabled"
popup/item_1/id = 1

[connection signal="item_selected" from="VolumetricFogOptions" to="." method="_on_volumetric_fog_options_item_selected"]
[connection signal="item_selected" from="VolumetricFogFilteringOptions" to="." method="_on_volumetric_fog_filtering_options_item_selected"]
